# ORBIT

./: .env.local.example  .gitignore  README.md  environment.yml  main.py  pyproject.toml
apps/: orbit_build_cli.py  orbit_cli.py  orbit_interface_cli.py  orbit_launch_active.py  orbit_print_active_launch.py  orbit_runtime_workbench.py  orbit_workbench.py  orbit_workbench_raw.py
config/: environment.yml
docs/: README.md  browser-first-slice.md  capability-family-consistency-cleanup-summary-2026-04-04.md  cli-pty-design-reference.md  filesystem-grounding-and-mutation-boundary.md  filesystem-runtime-quality-roadmap.md  interface-entrypoints-reference.md  interface-isolated-development-plan.md  interface-reference-inspirations.md  interfaces-cleanup-plan.md  mcp-adapter-layering-design.md  mcp-asset-audit-and-coding-agent-roadmap-2026-04-04.md  mcp-capability-test-commands.md  mcp-mutation-family-migration-design.md  process-mcp-first-slice.md  process-task-backed-family-note.md  process-task-backed-first-slice-design.md  project-structure.md  prompt-context-assembly-mvp.md  pty-input-debug.md  pty-runtime-cli-migration-carryover-checklist-2026-04-04.md  pytest-structured-first-slice.md  search-discovery-normalization-plan.md  session-manager-mvp-loop-contract.md  source-layout.md  web-fetch-policy-notes.md  workflow-calling-boundary-preservation-synthesis.md
notes/: approval-demo.txt  governed-state-approve.txt  governed-state-executed.txt  ls03_written.txt  ls03_written_runner.txt  ls04_output.txt  programming-capability-comparison-2026-04-06.md  (+1 more)
workspace/: PROMPT.md
(+306 files in other folders)
