[project]
name = "orbit-workbench"
version = "0.1.0"
description = "ORBIT: governance-oriented personal agent workbench"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<14",
  "psycopg2-binary>=2.9,<3",
  "ipykernel>=6.29,<7",
  "jupyter>=1.1,<2",
  "pandas>=2.2,<3",
  "mcp[cli]>=1.27,<2",
  "playwright>=1.52,<2",
]

[project.scripts]
orbit = "orbit.interfaces.pty_runtime_cli:browse_runtime_cli"
orbit-session = "orbit.interfaces.pty_runtime_cli:browse_runtime_cli"
orbit-inspector = "orbit.web_inspector:serve"
orbit-runtime-workbench = "orbit.interfaces.pty_runtime_cli:browse_runtime_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit", "src/mcp_servers"]
exclude = [
  "src/orbit/notebook/**",
  "src/orbit/runtime/testing/**",
]
